reference/k/snapshots/variables-record-destructuring-with-nested-patterns.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-record-destructuring-with-nested-patterns.cdz
---
# variables-record-destructuring-with-nested-patterns

## Input

```cadenza
let { x = a, y = b } = { x = 10, y = 20 }
a + b
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 114 101 99 111 114 100 45 100 101 115 116 114 117 99 116 117 114 105 110 103 45 119 105 116 104 45 110 101 115 116 101 100 45 112 97 116 116 101 114 110 115 46 99 100 122) (Span (0 42) (Apply (Op 61) (Apply (Ident 108 101 116) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 120) (Ident 97)) (Apply (Op 61) (Ident 121) (Ident 98)))) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 120) (Integer 10)) (Apply (Op 61) (Ident 121) (Integer 20))))) (Span (42 47) (Apply (Op 43) (Ident 97) (Ident 98))))
```

## Expected

```
() : Unit
30 : Integer
```

## K Output

```
<generatedTop>
  <k>
    30 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "a" |-> 10
    "b" |-> 20 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-record-destructuring-with-nested-patterns.cdz"
  </file>
  <span-start>
    42
  </span-start>
  <span-end>
    47
  </span-end>
</generatedTop>
```

