reference/k/snapshots/variables-shadowing-preserves-outer-binding.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-shadowing-preserves-outer-binding.cdz
---
# variables-shadowing-preserves-outer-binding

## Input

```cadenza
let x = 1
let outer_result =
    let x = 2
    x
outer_result
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 115 104 97 100 111 119 105 110 103 45 112 114 101 115 101 114 118 101 115 45 111 117 116 101 114 45 98 105 110 100 105 110 103 46 99 100 122) (Span (0 10) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 1))) (Span (10 49) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 111 117 116 101 114 95 114 101 115 117 108 116)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 2)) (Ident 120)))) (Span (49 61) (Ident 111 117 116 101 114 95 114 101 115 117 108 116)) (Span (62 63) (Ident 120)))
```

## Expected

```
() : Unit
() : Unit
2 : Integer
1 : Integer
```

## K Output

```
<k>
  1 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "outer_result" |-> 2
  "x" |-> 1 )
  1 |-> scope ( 0 , "x" |-> 2 )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  2
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/variables-shadowing-preserves-outer-binding.cdz"
</file>
<span-start>
  62
</span-start>
<span-end>
  63
</span-end>
```

