reference/k/snapshots/variables-shadowing-uses-previous-value.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-shadowing-uses-previous-value.cdz
---
# variables-shadowing-uses-previous-value

## Input

```cadenza
let counter = 0
let counter = counter + 1
let counter = counter + 1
counter
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 115 104 97 100 111 119 105 110 103 45 117 115 101 115 45 112 114 101 118 105 111 117 115 45 118 97 108 117 101 46 99 100 122) (Span (0 16) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 99 111 117 110 116 101 114)) (Integer 0))) (Span (16 42) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 99 111 117 110 116 101 114)) (Apply (Op 43) (Ident 99 111 117 110 116 101 114) (Integer 1)))) (Span (42 68) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 99 111 117 110 116 101 114)) (Apply (Op 43) (Ident 99 111 117 110 116 101 114) (Integer 1)))) (Span (68 75) (Ident 99 111 117 110 116 101 114)))
```

## Expected

```
() : Unit
() : Unit
() : Unit
2 : Integer
```

## K Output

```
<k>
  2 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "counter" |-> 2 )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/variables-shadowing-uses-previous-value.cdz"
</file>
<span-start>
  68
</span-start>
<span-end>
  75
</span-end>
```

