reference/k/snapshots/variables-shadowing-with-different-types.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-shadowing-with-different-types.cdz
---
# variables-shadowing-with-different-types

## Input

```cadenza
let x = 42
let x = "hello"
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 115 104 97 100 111 119 105 110 103 45 119 105 116 104 45 100 105 102 102 101 114 101 110 116 45 116 121 112 101 115 46 99 100 122) (Span (0 11) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 42))) (Span (11 27) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (String 104 101 108 108 111))) (Span (27 28) (Ident 120)))
```

## Expected

```
() : Unit
() : Unit
"hello" : String
```

## K Output

```
<generatedTop>
  <k>
    "hello" ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> "hello" )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-shadowing-with-different-types.cdz"
  </file>
  <span-start>
    27
  </span-start>
  <span-end>
    28
  </span-end>
</generatedTop>
```

