reference/k/snapshots/variables-simple-identifier-lookup.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-simple-identifier-lookup.cdz
---
# variables-simple-identifier-lookup

## Input

```cadenza
let name = "Alice"
name
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 115 105 109 112 108 101 45 105 100 101 110 116 105 102 105 101 114 45 108 111 111 107 117 112 46 99 100 122) (Span (0 19) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 110 97 109 101)) (String 65 108 105 99 101))) (Span (19 23) (Ident 110 97 109 101)))
```

## Expected

```
() : Unit
"Alice" : String
```

## K Output

```
<k>
  "Alice" ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "name" |-> "Alice" )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/variables-simple-identifier-lookup.cdz"
</file>
<span-start>
  19
</span-start>
<span-end>
  23
</span-end>
```

