reference/k/snapshots/variables-simple-let-binding-returns-unit.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-simple-let-binding-returns-unit.cdz
---
# variables-simple-let-binding-returns-unit

## Input

```cadenza
let x = 42
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 115 105 109 112 108 101 45 108 101 116 45 98 105 110 100 105 110 103 45 114 101 116 117 114 110 115 45 117 110 105 116 46 99 100 122) (Span (0 10) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 42))))
```

## Expected

```
() : Unit
```

## K Output

```
<k>
  tuple ( .List ) ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "x" |-> 42 )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/variables-simple-let-binding-returns-unit.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  10
</span-end>
```

