reference/k/snapshots/variables-tuple-destructuring.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-tuple-destructuring.cdz
---
# variables-tuple-destructuring

## Input

```cadenza
let (x, y) = (10, 20)
x
y
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 116 117 112 108 101 45 100 101 115 116 114 117 99 116 117 114 105 110 103 46 99 100 122) (Span (0 22) (Apply (Op 61) (Apply (Ident 108 101 116) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Ident 120) (Ident 121))) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Integer 10) (Integer 20)))) (Span (22 23) (Ident 120)) (Span (24 25) (Ident 121)))
```

## Expected

```
() : Unit
10 : Integer
20 : Integer
```

## K Output

```
<generatedTop>
  <k>
    20 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> 10
    "y" |-> 20 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-tuple-destructuring.cdz"
  </file>
  <span-start>
    24
  </span-start>
  <span-end>
    25
  </span-end>
</generatedTop>
```

