reference/k/snapshots/variables-wildcard-in-tuple.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-wildcard-in-tuple.cdz
---
# variables-wildcard-in-tuple

## Input

```cadenza
let (x, _) = (10, 20)
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 119 105 108 100 99 97 114 100 45 105 110 45 116 117 112 108 101 46 99 100 122) (Span (0 22) (Apply (Op 61) (Apply (Ident 108 101 116) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Ident 120) (Ident 95))) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Integer 10) (Integer 20)))) (Span (22 23) (Ident 120)))
```

## Expected

```
() : Unit
10 : Integer
```

## K Output

```
<generatedTop>
  <k>
    10 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> 10 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-wildcard-in-tuple.cdz"
  </file>
  <span-start>
    22
  </span-start>
  <span-end>
    23
  </span-end>
</generatedTop>
```

